--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png">
+    <link rel="manifest" href="/src/favicon/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jilio React Starter</title>
+    <title>URL Shortener</title>
   </head>
   <body>
     <div id="app"></div>
